@@ -5,6 +5,10 @@ Changelog
 1.2 (unreleased)
 ----------------
 
+- Add ``stub_reponse`` method to ``MockTestCase`` and adjust the
+  ``stub_request`` method accordant.
+  [phgross]
+
 - Made providing interfaces configurable for the ``stub_request`` method.
   [phgross]
 
